--- a/templates/none.html
+++ b/templates/none.html
@@ -22,6 +22,7 @@
         body.maintenance-page h1 {
             margin: 0;
         }
+
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +35,7 @@
     <meta name="author" content="Hanbyel">
     <meta name="generator" content="Django">
     <meta name="robots" content="noindex">
-    <meta property="og:title" content="공사중">
+    <meta property="og:title" content="www.hanplanet.com">
     <meta property="og:description" content="Django">
     <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/85411b54-68be-4ece-b21f-b531794020c0">
     {% include "partials/static_script_fallback.html" %}
@@ -45,9 +46,9 @@
     <script src="{% static_v 'js/bootstrap.min.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
     <script src="{% static_v 'js/script.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
     <title>
-        공사중</title>
+        www.hanplanet.com</title>
 </head>
 <body class="maintenance-page">
-    <h1>공사중</h1>
+    <h1>limhan456@naver.com</h1>
 </body>
 </html>
