--- a/templates/main.html
+++ b/templates/main.html
@@ -29,7 +29,11 @@
     <div class = 'main_banner'>
         <div class = "main_text">
             <h4 class = 'main_title'>
+                {% if ui_lang == 'en' %}
+                Hands-on full-stack developer, <b>Lim Hanbyeol</b>.
+                {% else %}
                 움직이는 풀스텍 개발자, <b>임한별</b> 입니다.
+                {% endif %}
             </h4>
             <div class = 'contact'>
                 <div class = "phone">
@@ -45,8 +49,13 @@
     <div class = "main_contents">
         <hr>
         <div class = 'main_subtitle'>
+            {% if ui_lang == 'en' %}
+            <div>I do not just watch from afar when something looks difficult. I step in and learn by doing.</div>
+            <div>I do not stop at assigned work. I keep creating work I can drive and finish.</div>
+            {% else %}
             <div>자신이 당장 하지 못하는 일이라고 손가락을 빨며 멀리서 지켜 보는 것이 아니라 일단 발을 담궈 봅니다.</div>
             <div>수동적으로 시키는 일만 하며 멈춰 있는 것이 아닌, 본인이 할 수 있는 일을 계속해서 만들어냅니다.</div>
+            {% endif %}
         </div>
         <hr>
         <div class="main_careers">
