--- a/templates/main/Projects.html
+++ b/templates/main/Projects.html
@@ -1,20 +1,26 @@
 <section class="projects">
     <div class="head">
         <div class="title">
-            <h3><b>프로젝트</b></h3>
-            <div>흥미를 가지고 진행했던 프로젝트들을 소개합니다</div>
+            <h3><b>{% if ui_lang == 'en' %}Projects{% else %}프로젝트{% endif %}</b></h3>
+            <div>
+                {% if ui_lang == 'en' %}
+                A selection of projects I built with genuine curiosity.
+                {% else %}
+                흥미를 가지고 진행했던 프로젝트들을 소개합니다
+                {% endif %}
+            </div>
         </div>
     </div>
     <cards class="project_cards">
         {% for project in projects %}
         <li class="project_card">
             <div>
-                <a href="/project/{{ project.id }}/">
+                <a href="{% url 'main:ProjectDetail_lang' ui_lang=ui_lang project_id=project.id %}">
                     <img class="project_card_img hover-dark" src="{{ project.banner_img.url }}"/>
                 </a>
                 <div class="project_card_text">
                     <hr>
-                    <h5 class="project_card_contents_title"><b>{{ project.title }}</b></h5>
+                    <h5 class="project_card_contents_title"><b>{{ project.display_title }}</b></h5>
                     <hr>
                     <ul class="tags">
                         {% for tag in project.tags.all %}
